--- a/assets/登陆.html
+++ b/assets/登陆.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/base.css"/>
 <link rel="stylesheet" type="text/css" href="css/master.css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>登陆 - 动脑学院项目实战案例</title>
+<title>登陆 - 个人学习实战</title>
 </head>
 
 <body>
