--- a/assets/购物车.html
+++ b/assets/购物车.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/base.css"/>
 <link rel="stylesheet" type="text/css" href="css/master.css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>购物车 - 动脑学院项目实战案例</title>
+<title>购物车 - 个人学习</title>
 </head>
 
 <body>
